# feedback-form-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
application/dto/requests/: __init__.py  create_form_request.py  create_question_request.py  submit_response_request.py  update_form_request.py  update_question_request.py
application/dto/responses/: __init__.py  answer_response.py  form_response.py  question_response.py  response_response.py
application/mappers/: __init__.py  form_mapper.py  question_mapper.py  response_mapper.py
application/use_cases/: __init__.py  create_form_use_case.py  delete_form_use_case.py  delete_user_data_use_case.py  export_user_data_use_case.py  get_form_use_case.py  get_responses_use_case.py  get_user_data_use_case.py  list_forms_use_case.py  submit_response_use_case.py  update_form_use_case.py
domain/: exceptions.py
domain/entities/: __init__.py  answer.py  form.py  question.py  response.py
domain/repositories/: __init__.py  form_repository.py  response_repository.py
domain/value_objects/: __init__.py  form_id.py  form_type.py  multilingual_text.py  question_id.py  question_type.py  response_id.py
infrastructure/config/: __init__.py  dependencies.py  settings.py
infrastructure/persistence/: __init__.py  mock_form_repository.py  mock_response_repository.py  seed_data.py
presentation/api/: main.py
presentation/api/middleware/: __init__.py  auth.py
presentation/api/routers/: __init__.py
presentation/api/routers/backoffice/: __init__.py  forms.py  responses.py
presentation/api/routers/gdpr/: __init__.py  data.py
presentation/api/routers/mobile/: __init__.py  forms.py  responses.py
tests/integration/: conftest.py  test_backoffice_forms.py  test_backoffice_responses.py  test_gdpr_data.py  test_mobile_forms.py  test_mobile_responses.py  test_tags_campaigns.py
tests/unit/application/: test_create_form_use_case.py  test_form_mapper.py  test_get_form_use_case.py
tests/unit/domain/: test_form_id.py  test_multilingual_text.py  test_question.py  test_question_id.py  test_response_entity.py  test_response_id.py
tests/unit/infrastructure/: test_mock_response_repository_gdpr.py
